Fixes from code review

--- a/src/Microsoft.Health.Fhir.Shared.Web/appsettings.json
+++ b/src/Microsoft.Health.Fhir.Shared.Web/appsettings.json
@@ -50,7 +50,7 @@
                 "NumberOfPagesPerCommit": 10
             },
             "Reindexing": {
-                "Enabled": true,
+                "Enabled": false,
                 "ConsecutiveFailuresThreshold": 5,
                 "DefaultMaximumThreadsPerReindexJob": 1,
                 "MaximumNumberOfResourcesPerQuery": 100,
